# rz3

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Cargo.toml  DETERMINISM_PHASES.md  LICENSE-APACHE  LICENSE-MIT  README.md  RZ3_PARALLEL_COORDINATION.md  RZ3_ROADMAP.md  verification_manifest.toml
benchmarks/smt2/QF_BV/: sat_eq8.smt2  unsat_eq8.smt2
benchmarks/smt2/QF_FP/: sat_nan_constructor.smt2
benchmarks/smt2/QF_LRA/: sat_strict_interval.smt2  unsat_bounds.smt2
benchmarks/smt2/QF_UF/: unsat_congruence_bool.smt2
src/: DECISION_LOG.md  lib.rs  main.rs  parser.rs  tactic.rs
src/ast/: fp.rs  mod.rs
src/proof/: drat.rs  mod.rs
src/sat/: mod.rs
src/theory/: DECISION_LOG.md  array.rs  bv.rs  euf.rs  fp.rs  lra.rs  mod.rs  nla.rs  quantifier.rs  string.rs
tests/: array_tests.rs  define_fun_tests.rs  determinism_full_test.rs  dl_difference_logic.rs  euf_bool_congruence_tests.rs  fp_ground_tests.rs  get_value_tests.rs  lra_disequality_soundness.rs  lra_simplex_termination.rs  lra_strict_bound_conflict.rs  nla_tests.rs  parser_determinism_test.rs  parser_params_test.rs  parser_tests.rs  quantifier_tests.rs  sat_tests.rs  smt_lib_2_6_test.rs  smt_tests.rs  string_tests.rs  tactic_tests.rs  theory_tests.rs  type_inference_tests.rs
