[package]
name = "rz3"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Molina-Burgos <pako.molina@gmail.com>"]
description = "Deterministic, exact-rational SMT solver in pure Rust (DPLL(T)/CDCL) with a complete linear-arithmetic core. Zero C dependencies, WASM-deployable, reproducible run-to-run."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yatrogenesis/rz3"
readme = "README.md"
keywords = ["smt", "solver", "theorem-prover", "satisfiability", "deterministic"]
categories = ["mathematics", "science", "algorithms"]
exclude = ["/.codex_target", "/.codex_tmp", "/.codex_cache"]

[[bin]]
name = "rz3"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
sha2 = "0.10"
